chore: remove Framer text reference from CSS comment

--- a/src/components/VinylCardScroll.css
+++ b/src/components/VinylCardScroll.css
@@ -136,7 +136,7 @@
   }
 }
 
-/* Close button - matching Framer style */
+/* Close button */
 .card-modal-close {
   position: absolute;
   top: -16px;
